[gd_scene load_steps=6 format=3 uid="uid://bkektrbxoxojk"]

[ext_resource type="Script" uid="uid://bdp1jvgyj3wmm" path="res://game/game.gd" id="1_l1rk1"]
[ext_resource type="Script" uid="uid://cvreglwx355ig" path="res://game/gui.gd" id="2_vasa2"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_noarx"]
sky_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)
ground_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)

[sub_resource type="Sky" id="Sky_a0tk4"]
sky_material = SubResource("ProceduralSkyMaterial_noarx")

[sub_resource type="Environment" id="Environment_r3fl7"]
background_mode = 2
sky = SubResource("Sky_a0tk4")
tonemap_mode = 2
glow_enabled = true

[node name="icosahedron_test" type="Node3D"]
script = ExtResource("1_l1rk1")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_r3fl7")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="Camera_Base" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="Camera_Arm" type="Node3D" parent="Camera_Base"]
unique_name_in_owner = true

[node name="Camera3D" type="Camera3D" parent="Camera_Base/Camera_Arm"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 32.7171)

[node name="GUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
script = ExtResource("2_vasa2")

[node name="Tile_Info" type="VBoxContainer" parent="GUI"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2

[node name="type" type="Label" parent="GUI/Tile_Info"]
layout_mode = 2
text = "TILE TYPE"

[node name="Label2" type="Label" parent="GUI/Tile_Info"]
layout_mode = 2
text = "---------------------s"

[node name="city_name_label" type="Label" parent="GUI/Tile_Info"]
unique_name_in_owner = true
layout_mode = 2

[node name="NewBuildContainer" type="VBoxContainer" parent="GUI/Tile_Info"]
unique_name_in_owner = true
layout_mode = 2

[node name="NewBuildTypeOptions" type="OptionButton" parent="GUI/Tile_Info/NewBuildContainer"]
unique_name_in_owner = true
layout_mode = 2
item_count = 2
popup/item_0/text = "Campsite"
popup/item_0/id = 0
popup/item_1/text = "Farm"
popup/item_1/id = 1

[node name="ConfirmBuild" type="Button" parent="GUI/Tile_Info/NewBuildContainer"]
layout_mode = 2
text = "Confirm Build"

[node name="CurrentBuildingDisplay" type="VBoxContainer" parent="GUI/Tile_Info"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="building_name" type="Label" parent="GUI/Tile_Info/CurrentBuildingDisplay"]
layout_mode = 2
text = "building name"

[node name="storage" type="Label" parent="GUI/Tile_Info/CurrentBuildingDisplay"]
layout_mode = 2
text = "storage"

[node name="HBoxContainer" type="HBoxContainer" parent="GUI"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="date_label" type="Label" parent="GUI/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Date Time"

[node name="faster_button" type="Button" parent="GUI/HBoxContainer"]
layout_mode = 2
text = "Faster"

[node name="slower_button" type="Button" parent="GUI/HBoxContainer"]
layout_mode = 2
text = "Slower"

[connection signal="new_building" from="GUI" to="." method="_on_gui_new_building"]
[connection signal="pressed" from="GUI/Tile_Info/NewBuildContainer/ConfirmBuild" to="GUI" method="_on_confirm_build_pressed"]
[connection signal="pressed" from="GUI/HBoxContainer/faster_button" to="GUI" method="_on_faster_button_pressed"]
[connection signal="pressed" from="GUI/HBoxContainer/slower_button" to="GUI" method="_on_slower_button_pressed"]
